homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dash.crt.house
spec:
  ingressClassName: nginx-crt-house
  rules:
  - host: dash.crt.house
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
  tls:
  - hosts:
    - dash.crt.house
